name:                   beep
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <your email here>
maintainer:             James Cook <your email here>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               I'm too lame to describe my project
description:            I'm too lame to describe my project

source-repository head
  type: git
  location: git://github.com/mokus0/beep.git

Library
  ghc-options:          -fwarn-unused-imports
  hs-source-dirs:       src
  exposed-modules:      Network.BEEP.Core
                        Network.BEEP.Core.DataFrame
                        Network.BEEP.Core.Mapping
                        Network.BEEP.Core.Profile
                        Network.BEEP.Core.Session
                        Network.BEEP.Core.Word31
                        Network.BEEP.Mapping.TCP
                        Network.BEEP.Profile.ChannelManagement
                        Network.BEEP.Profile.ChannelManagement.Types
                        Network.BEEP.Profile.ChannelManagement.Input
                        Network.BEEP.Profile.ChannelManagement.Output
  other-modules:        Network.BEEP.Core.DataFrame.Get
                        Network.BEEP.Core.DataFrame.Put
                        Network.BEEP.Core.DataFrame.Types
                        
                        
  build-depends:        attoparsec,
                        base >= 4 && < 5,
                        binary,
                        bytestring, 
                        bytestring-class,
                        containers,
                        monad-loops,
                        network,
                        network-bytestring,
                        stateref == 0.3.*,
                        stm,
                        xml
